--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.18.1
+  flutter_svg: ^2.0.7
+  flutter_shaders: ^0.1.3
+  flutter_animate: ^4.2.0
+  font_awesome_flutter: ^10.7.0
 
-  # The following adds the Cupertino Icons font to your application.
+
+
+  # The following adds the Cupertino Icons fonts to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
@@ -51,11 +58,17 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
+  # The following line ensures that the Material Icons fonts is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
+    - assets/icons/
+  fonts:
+    - family: Recursive
+      fonts:
+        - asset: assets/fonts/Recursive/Recursive-VariableFont_CASL_CRSV_MONO_slnt_wght.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -70,8 +83,8 @@ flutter:
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
+  # "family" key with the fonts family name, and a "fonts" key with a
+  # list giving the asset and other descriptors for the fonts. For
   # example:
   # fonts:
   #   - family: Schyler
