--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
             <meta-data
                 android:name="io.flutter.embedding.android.NormalTheme"
                 android:resource="@style/NormalTheme" />
+              <meta-data
+      android:name="com.google.firebase.messaging.default_notification_channel_id"
+      android:value="default_channel" />    
         </activity>
 
         <!-- Spotify callback handler for flutter_web_auth_2 -->
