--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,11 +47,13 @@ dependencies:
   go_router: ^16.0.0
   firebase_messaging: ^16.0.0
   cloud_functions: ^6.0.0
+  firebase_app_check: ^0.4.0
 
 
   # The following adds the Cupertino Icons fonts to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_local_notifications: ^19.4.0
 
 
 dev_dependencies:
