--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_local_notifications: ^19.4.0
+  firebase_storage: ^13.0.0
 
 
 dev_dependencies:
@@ -79,6 +80,7 @@ flutter:
   assets:
     - assets/
     - assets/icons/
+    - assets/images/
     - assets/icons/icons-navigation/
 
   fonts:
