--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_local_notifications: ^19.4.0
   firebase_storage: ^13.0.0
+  get_it: ^8.2.0
 
 
 dev_dependencies:
